--- a/React/ted-talks/package.json
+++ b/React/ted-talks/package.json
@@ -2,6 +2,7 @@
   "name": "ted-talks",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tedtalks.github.io/TED-Talks/",
   "dependencies": {
     "eslint-config-react-tools": "^1.0.10",
     "gh-pages": "^1.1.0",
@@ -15,6 +16,7 @@
     "react-table": "^6.7.4",
     "react-typist": "^2.0.4",
     "recharts": "^1.0.0-beta.6",
+    "recompose": "^0.26.0",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
@@ -25,5 +27,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://dianatofan.github.io/TED-Talks/"
+  "devDependencies": {
+    "why-did-you-update": "^0.1.0"
+  }
 }
